# VIORRA

./: .gitignore  LICENSE  MANIFEST.in  README.md  benchmark_ground_truth.py  benchmark_results.txt  finetune_viorra.py  hf_config.json  hf_readme.md  pyproject.toml  requirements.txt  test_stream.py  unsloth_hf_readme.md
.agents/: AGENTS.md
viorra/: SOUL.md  chat_instructions.txt  chat_prompt.txt  cli.py  compile_rag_db.py  db.py  engine.py  evaluate_instructions.txt  hardware.py  memory_agent.py  server.py  system_prompt.txt  telemetry.py
viorra/static/: index.html  style.css
