[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viorra"
version = "1.0.0"
description = "VIORRA: The brutal personal statement reviewer, running locally."
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "huggingface_hub[hf_xet]",
    "litert-lm-api",
    "faiss-cpu",
    "datasets",
    "fastembed",
    "rich",
    "numpy",
    "langdetect",
    "python-multipart",
    "python-docx",
    "PyPDF2"
]

[tool.setuptools]
packages = ["viorra"]

[tool.setuptools.package-data]
"*" = ["static/*", "system_prompt.txt", "chat_prompt.txt", "viorra_database.json"]

[project.scripts]
viorra = "viorra.cli:main"
