[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viorra"
version = "1.1.0"
description = "VIORRA: The brutal personal statement reviewer, running locally."
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "litert-lm-api",
    "datasets",
    "fastembed",
    "rich",
    "numpy",
    "langdetect",
    "python-multipart",
    "python-docx",
    "pypdf",
    "smolagents",
    "json-repair>=0.30.0",
    "psutil",
    "openai>=2.44.0",
    "turbovec",
    "requests",
    "kaggle>=1.7.4.5",
]

[tool.setuptools]
packages = ["viorra"]

[tool.setuptools.package-data]
"*" = ["static/*", "SOUL.md", "evaluate_instructions.txt", "chat_instructions.txt"]

[project.scripts]
viorra = "viorra.cli:main"
